--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -1,114 +1,37 @@
-<!doctype html>
-<html lang="en">
+{% extends 'base.html' %}
 {% load static %}
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="Model">
-        <meta name="author" content="Lucas Melo">
-        <title>Lucas Melo | Blog</title>
+{% block content %}
+    <main class="pt-5 bg-light" role="main">
+        <div class="album container">
+            <h1 class="pt-3 text-center">Welcome to Lucas Blog!</h1>
+            <br>
+            <h4>Latest Posts</h4>
+            <form class="form-inline my-1 my-lg-0">
+                <input class="form-control form-control-sm mr-sm-1" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-sm btn-outline-secondary my-1 my-sm-0" type="submit">Search</button>
+            </form>
+            <hr>
+        </div>
 
-        <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-
-        <!-- Bootstrap core CSS -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-        <style>
-            .bd-placeholder-img {
-            font-size: 1.125rem;
-            text-anchor: middle;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
-        }
-
-            @media (min-width: 768px) {
-                .bd-placeholder-img-lg {
-                font-size: 3.5rem;
-                }
-        }
-        </style>
-        
-        <!-- Custom styles for this template -->
-        <link href="/blog/templates/blog/album.css" rel="stylesheet">
-
-    </head>
-
-    <body>
-        <header>
-            <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
-                <a class="navbar-brand" href="{% url 'home' %}">Lucas Melo</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link pl-1 pr-1" href="{% url 'home' %}">JOBS</a>
-                        </li>
-                        <li class="nav-item active">
-                            <a class="nav-link pl-1 pr-1" href="{% url 'blog' %}">BLOG</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link pl-1 pr-1" href="{% static 'CV - Lucas Melo.pdf'%}">RESUME <i class="fas fa-file-download"></i></a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </header>
-
-        <main class="pt-5 bg-light" role="main">
-            <div class="album container">
-                <h1 class="pt-3 text-center">Welcome to Lucas Blog!</h1>
-                <br>
-                <h4>Latest Posts</h4>
-                <form class="form-inline my-1 my-lg-0">
-                    <input class="form-control form-control-sm mr-sm-1" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-sm btn-outline-secondary my-1 my-sm-0" type="submit">Search</button>
-                </form>
-                <hr>
-            </div>
-
-            <div class="album py-5 bg-light pt-5">
-                <div class="container">
-                    <div class="row">
-                        <div class="card-columns">
-
-                        {% for blog in blogs.all %}
-                            <a href="{% url 'post' blog.id %}" class="text-muted">
-                                <div class="card small">
-                                    <img class="card-img-top img-fluid text-dark" src="{{ blog.image.url }}" alt="Card image cap">
-                                    <div class="card-body">
-                                        <h6 class="card-title">{{ blog.title }}</h6>
-                                        <p class="card-text">{{ blog.summary }}</p>
-                                        <p class="card-text"><small class="text-muted">{{ blog.pub_date }}</small></p>
-                                    </div>
+        <div class="album py-5 bg-light pt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="card-columns rounded">
+                    {% for blog in blogs.all %}
+                        <a href="{% url 'post' blog.id %}" class="text-muted">
+                            <div class="card small">
+                                <img class="card-img-top img-fluid text-dark" src="{{ blog.image.url }}" alt="Card image cap">
+                                <div class="card-body">
+                                    <h6 class="card-title">{{ blog.title }}</h6>
+                                    <p class="card-text">{{ blog.summary }}</p>
+                                    <p class="card-text"><small class="text-muted">{{ blog.pub_date }}</small></p>
                                 </div>
-                            </a>
-                        {% endfor %}
-
-                        </div>
+                            </div>
+                        </a>
+                    {% endfor %}
                     </div>
                 </div>
             </div>
-        </main>
-
-    </body>
-
-    <footer class="text-muted">
-        <div class="container text-center">
-        {% comment %} 
-            <p class="float-right"><a href="#">Back to top</a></p> 
-        {% endcomment %}
-            <br>
-            <p class="small">CopyRight&copy; 2019 - {% now "Y" %} | <a href="#" class="text-secondary"> Lucas Melo</a></p>
         </div>
-    </footer>
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-</html>
+    </main>
+{% endblock %}
