--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -1,117 +1,41 @@
-<!doctype html>
-<html lang="en">
+{% extends 'base.html' %}
 {% load static %}
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="Model">
-        <meta name="author" content="Lucas Melo">
-        <title>Lucas Melo | Jobs</title>
+{% block content %}
+    <main role="main" class="bg-light">
+        <section class="jumbotron text-center">
+            <div class="container pt-3">
+                <h1 class="jumbotron-heading">Hi, I'm Lucas.</h1>
+                <p class="text-muted">I was born in São José/SC, Brazil. I arrived in Dublin/IE in October/2018 and I am open to learning, prepared for the challenge of exercising new roles and activities with flexibility. I always try to keep myself updated, with the purpose of personal and professional improvement.</p>
+                <img class="center rounded-circle" src="{% static 'profile.jpg'%}" height="250" />
+                <br><br>
+                <span style="font-size: 2em">
+                    <a href="https://www.facebook.com/lucas.reinaldo.779" target="_blank" title="Facebook"><i class="fab fa-facebook text-dark"></i></a>
+                    <a href="https://github.com/LucasReinaldo" target="_blank" title="GitHub"><i class="fab fa-github text-dark"></i></a>
+                    <a href="mailto:lucasreinaldo.demelo@hotmail.com" target="_blank" title="lucasreinaldo.demelo@hotmail.com"><i class="fas fa-envelope-open-text text-dark"></i></a>
+                    <a href="https://www.instagram.com/lreinaldodemelo" target="_blank" title="Instagram"><i class="fab fa-instagram text-dark"></i></a>
+                    <a href="https://www.linkedin.com/in/lucas-reinaldo-de-melo" target="_blank" title="LinkedIn"><i class="fab fa-linkedin text-dark"></i></a>                        
+                </span>
+            </div>
+        </section>
 
-        <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-
-        <!-- Bootstrap core CSS -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        
-        <style>
-            .bd-placeholder-img {
-            font-size: 1.125rem;
-            text-anchor: middle;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
-        }
-
-            @media (min-width: 768px) {
-                .bd-placeholder-img-lg {
-                font-size: 3.5rem;
-                }
-        }
-        </style>
-
-        <!-- Custom styles for this template -->
-        <link href="../jobs/templates/jobs/album.css" rel="stylesheet">
-
-    </head>
-
-    <body>
-        <header>
-            <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
-                <a class="navbar-brand" href="{% url 'home' %}">Lucas Melo</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link pl-1 pr-1" href="{% url 'home' %}">JOBS</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link pl-1 pr-1" href="{% url 'blog' %}">BLOG</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link pl-1 pr-1" href="{% static 'CV - Lucas Melo.pdf'%}">RESUME <i class="fas fa-file-download"></i></a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </header>
-
-        <main role="main" class="bg-light">
-            <section class="jumbotron text-center">
-                <div class="container pt-3">
-                    <h1 class="jumbotron-heading">Hi, I'm Lucas.</h1>
-                    <p class="text-muted">I was born in São José/SC, Brazil. I arrived in Dublin/IE in October/2018 and I am open to learning, prepared for the challenge of exercising new roles and activities with flexibility. I always try to keep myself updated, with the purpose of personal and professional improvement.</p>
-                    <img class="center rounded-circle" src="{% static 'profile.jpg'%}" height="250" />
-                    <br><br>
-                    <span style="font-size: 2em">
-                        <a href="https://www.facebook.com/lucas.reinaldo.779" target="_blank" title="Facebook"><i class="fab fa-facebook text-dark"></i></a>
-                        <a href="https://github.com/LucasReinaldo" target="_blank" title="GitHub"><i class="fab fa-github text-dark"></i></a>
-                        <a href="mailto:lucasreinaldo.demelo@hotmail.com" target="_blank" title="lucasreinaldo.demelo@hotmail.com"><i class="fas fa-envelope-open-text text-dark"></i></a>
-                        <a href="https://www.instagram.com/lreinaldodemelo" target="_blank" title="Instagram"><i class="fab fa-instagram text-dark"></i></a>
-                        <a href="https://www.linkedin.com/in/lucas-reinaldo-de-melo" target="_blank" title="LinkedIn"><i class="fab fa-linkedin text-dark"></i></a>                        
-                    </span>
-                </div>
-            </section>
-
-            <div class="album py-5 bg-light">
-                <div class="container">
-                    <div class="row">
-
-                    {% for job in jobs.all %}
-                        <div class="col-md-3">
-                            <a href="#" class="text-muted">
-                                <div class="card mb-3 shadow-sm bg-light">
-                                    <img class="bd-placeholder-img card-img-top" width="100%" height="175" src="{{ job.image.url }}" role="img">
-                                    <div class="card-body">
-                                        <p class="card-text"><small><strong>{{ job.summary }}</strong></small></p>
-                                    </div>
+        <div class="album py-5 bg-light">
+            <div class="container">
+                <div class="row">
+                {% for job in jobs.all %}
+                    <div class="col-md-3">
+                        <a href="#" class="text-muted">
+                            <div class="card mb-3 shadow-sm bg-light rounded">
+                                <img class="bd-placeholder-img card-img-top" width="100%" height="175" src="{{ job.image.url }}" role="img">
+                                <div class="card-body">
+                                    <p class="card-text"><small><strong>{{ job.summary }}</strong></small></p>
                                 </div>
-                            </a>
-                        </div>
-                        {% endfor %}
-
+                            </div>
+                        </a>
                     </div>
+                    {% endfor %}
                 </div>
             </div>
-        </main>
-
-    </body>
-
-    <footer class="text-muted">
-        <div class="container text-center">
-        {% comment %} 
-            <p class="float-right"><a href="#">Back to top</a></p> 
-        {% endcomment %}
-            <br>
-            <p class="small">CopyRight&copy; 2019 - {% now "Y" %} | <a href="#" class="text-secondary"> Lucas Melo</a></p>
         </div>
-    </footer>
+    </main>
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-</html>
+{% endblock %}
